[package]
name = "physics"
version = "0.1.0"
authors = ["Samuel Hurel <samuel.hurel@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nphysics2d = "0.9.0"
ncollide2d = "0.17.1"
nalgebra = "0.16.0"
serde = "1.0.71"
serde_derive = "1.0.71"

[dependencies.wasm-bindgen]
version = "0.2.15"
features = ["serde-serialize"]
